deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0.0
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filmes
spec:
  selector:
    matchLabels:
      app: filmes
  template:
    metadata:
      labels:
        app: filmes
    spec:
      containers:
      - name: filmes
        image: sandovalcp/filmes:v1
        ports:
          - containerPort: 5000
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: filmes
#spec:
#  selector:
#    app: filmes
#  ports:
#  - port: 80
#    targetPort: 5000
#    nodePort: 31000
#  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
